# cfd-vv-suite

./: .dockerignore  .gitignore  .zenodo.json  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE-v0.5.1.md  RELEASE_NOTES_v0.3.1.md  docker-compose.yml  mkdocs.yml
tools/: README.md  pyproject.toml
tools/cfdvv/: __init__.py  cli.py  compare.py  gci.py  norms.py  plot.py  readers.py  schema.py  yaml_reader.py
tools/cfdvv/cases/imported/cfdbench-couette/: README.md  case.yaml
tools/cfdvv/cases/imported/cfdbench-poiseuille/: README.md  case.yaml
tools/cfdvv/cases/imported/ercoftac-bfs-laminar/: README.md  case.yaml
tools/cfdvv/cases/imported/exactpack-sod/: README.md  case.yaml
tools/cfdvv/cases/imported/exactpack-sod/scripts/: generate_exactpack.py
tools/cfdvv/cases/imported/jhtdb-channel180/: README.md  case.yaml  query_jhtdb.py
tools/cfdvv/cases/imported/masa-ns-2d/: README.md  case.yaml
tools/cfdvv/cases/imported/masa-ns-2d/scripts/: generate_masa.py
tools/cfdvv/cases/imported/nasa-tmr-flatplate/: README.md  case.yaml
tools/cfdvv/cases/validation/complex-geometry/ahmed-body-25/: README.md  case.yaml
tools/cfdvv/cases/validation/complex-geometry/cylinder-viv/: case.yaml
tools/cfdvv/cases/validation/complex-geometry/cylinder-viv-3d/: case.yaml
tools/cfdvv/cases/validation/laminar/backward-facing-step-3d/: case.yaml
tools/cfdvv/importers/: __init__.py
tools/tests/: test_comprehensive.py  test_core.py  test_import.py  test_integration.py  test_plot.py  test_regression.py
tools/tests/integration_data/: bad_poiseuille.csv  few_points.csv  gci-coarse.csv  gci-fine.csv  gci-medium.csv  golden_bad.txt  golden_example.txt  golden_few.txt  golden_good.txt  golden_report.html  good_poiseuille.csv
(+319 files in other folders)
